--- a/bower.json
+++ b/bower.json
@@ -14,8 +14,8 @@
     "tests"
   ],
   "dependencies": {
-    "foundation": "~5.5.2",
     "angular": "~1.3.15",
-    "angular-resource": "~1.3.15"
+    "angular-resource": "~1.3.15",
+    "bootstrap": "~3.3.4"
   }
 }
