--- a/package.json
+++ b/package.json
@@ -7,15 +7,23 @@
     "test": "tests"
   },
   "dependencies": {
+    "express": "^4.12.3",
     "http-server": "^0.8.0",
     "protractor": "^2.0.0"
   },
   "devDependencies": {
+    "chai": "^2.3.0",
+    "grunt": "^0.4.5",
+    "grunt-webdriver": "^0.5.1",
     "jasmine-core": "^2.3.0",
+    "jasmine-node": "^1.14.5",
     "karma": "^0.12.31",
     "karma-chrome-launcher": "^0.1.8",
     "karma-jasmine": "^0.3.5",
-    "karma-phantomjs-launcher": "^0.1.4"
+    "karma-phantomjs-launcher": "^0.1.4",
+    "mocha": "^2.2.4",
+    "selenium-standalone": "^4.4.0",
+    "webdriverio": "^2.4.5"
   },
   "scripts": {
     "test": "./node_modules/karma/bin/karma start test/unit/karma.conf.js --single-run --browsers PhantomJS"
